--- a/template/podcast_single.html
+++ b/template/podcast_single.html
@@ -277,7 +277,7 @@
     <div class="upper">
         <span class="podcast-title">Hài lòng với nhưng thứ đã có sẽ làm bạn hạnh phúc hơn</span>
         <div class="dot-seperator"></div>
-        <span class="podcast-name">Phần 2: Quẳng gánh lo đi mà sống</span>
+        <span class="podcast-name" id="track">Phần 2: Quẳng gánh lo đi mà sống</span>
     </div>
     <div class="divider"></div>
     <div class="lower">
@@ -287,23 +287,31 @@
                     <span class="material-icons smaterial-icons-outlined">playlist_play</span>
                     <span class="material-icons material-icons-outlined">1x_mobiledata</span>
                     <span class="material-icons material-icons-outlined">volume_up</span>
-                    <span class="material-icons material-icons-outlined">skip_previous</span>
-                    <span class="material-icons material-icons-outlined">replay_10</span>
+                    <button class="btn" id="prevBtn">
+                        <span class="material-icons material-icons-outlined">skip_previous</span>
+                    </button>
+                    <button id="replay10s" class="btn">
+                        <span class="material-icons material-icons-outlined">replay_10</span>
+                    </button>
                     <button class="play-button" id="playBtn">
                        <span class="material-icons material-icons-outlined">
                         play_arrow
                         </span>
                     </button>
-                    <span class="material-icons material-icons-outlined">forward_10</span>
-                    <span class="material-icons material-icons-outlined">skip_next</span>
+                    <button id="forward10s" class="btn">
+                        <span class="material-icons material-icons-outlined">forward_10</span>
+                    </button>
+                    <button class="btn" id="nextBtn">
+                        <span class="material-icons material-icons-outlined">skip_next</span>
+                    </button>
                 </div>
                 <div class="col-md-8 progress-holder">
-                    <span class="time-played">18:43</span>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"
+                    <span id="timer" class="time-played">0:00</span>
+                    <div class="progress" id="progressWrapper">
+                        <div id="progress" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="25"
                              aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span class="total-time">34:43</span>
+                    <span id="duration" class="total-time">n/a</span>
                 </div>
             </div>
         </div>
@@ -432,7 +440,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.core.min.js" integrity="sha512-+wqa4/aOL4vwhL637A4p+6epqhUHDqpEfYJa1+PlzlMf908CSOb3xtIeKwZWh5Q0Q/R2nYUKxH4vvcQg+k8KKQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script src="../assets/js/jquery.min.js"></script>
-<script src="../assets/js/main.js"></script>
+<script src="../assets/js/player.js"></script>
 <script src="../assets/js/bootstrap.bundle.min.js"></script>
 <script src="../assets/owlcarousel/owl.carousel.min.js"></script>
 <script src="https://kit.fontawesome.com/16985780f3.js" crossorigin="anonymous"></script>
