--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1600,7 +1600,8 @@ p {
         width: 100%;
         height: 3px;
         margin-left: 20px;
-        margin-right: 20px; }
+        margin-right: 20px;
+        cursor: pointer; }
       .podcast-single-body .podcast-player-holder .lower .progress-holder .progress-bar {
         transition: width 0.1s ease; }
 .podcast-single-body .footer-holder {
