--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2004,6 +2004,7 @@ p{
           height: 3px;
           margin-left: 20px;
           margin-right: 20px;
+          cursor: pointer;
         }
         .progress-bar{
           transition: width 0.1s ease;
