--- a/template/podcast_single.html
+++ b/template/podcast_single.html
@@ -283,10 +283,16 @@
     <div class="lower">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 button-holder">
+                <div class="col-md-6 button-holder">
                     <span class="material-icons smaterial-icons-outlined">playlist_play</span>
-                    <span class="material-icons material-icons-outlined">1x_mobiledata</span>
-                    <span class="material-icons material-icons-outlined">volume_up</span>
+                    <span class="play-speed">1X</span>
+                    <div class="volume-holder">
+                        <span class="material-icons material-icons-outlined">volume_up</span>
+                        <div class="progress" id="volumeProgressWrapper">
+                            <div id="volProgress" class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25"
+                                 aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
                     <button class="btn" id="prevBtn">
                         <span class="material-icons material-icons-outlined">skip_previous</span>
                     </button>
@@ -305,9 +311,9 @@
                         <span class="material-icons material-icons-outlined">skip_next</span>
                     </button>
                 </div>
-                <div class="col-md-8 progress-holder">
+                <div class="col-md-6 progress-holder">
                     <span id="timer" class="time-played">0:00</span>
-                    <div class="progress" id="progressWrapper">
+                    <div class="progress" id="durationProgressWrapper">
                         <div id="progress" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="25"
                              aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
