--- a/template/my_account.html
+++ b/template/my_account.html
@@ -165,9 +165,9 @@
       <div class="col-md-5 left">
         <div class="text-head">
           <p class="text">thông tin gói sử dụng</p>
-          <a href="">
+          <button class="btn" id="purchaseHistory">
             <p class="history">Lịch sử mua gói</p>
-          </a>
+          </button>
         </div>
         <div class="trial-card">
 
@@ -183,6 +183,10 @@
   </div>
 </div>
 <!--Contact-end-->
+<div class="popup-purchase" id="popupPurchase">
+  <div class="holder">
+
+  </div>
 </div>
 <!--Footer-start-->
 <footer class="footer-holder">
