--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3026,6 +3026,26 @@ p{
 }
 // My account page
 .my-account-body{
+  position: relative;
+  .popup-purchase{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.7;
+    z-index: 14;
+    visibility: hidden;
+    display: flex;
+    justify-content: center;
+    .holder{
+      margin-top: 200px;
+      width: 941px;
+      height: 657px;
+      background-color: white;
+    }
+  }
   .contact-holder{
     margin-top: 60px;
     .contact-left{
@@ -3185,6 +3205,9 @@ p{
           text-align: left;
           color: #1B3864;
         }
+        .btn{
+          padding: 0;
+        }
         .history{
           font-style: normal;
           font-weight: bold;
@@ -3218,6 +3241,88 @@ p{
         color: #FFFFFF;
         padding: 14px 44px;
         border-radius: 8px;
+      }
+    }
+  }
+}
+
+//Restrict layout
+.post-body{
+  position: relative;
+  .restrict-layer{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: black;
+    opacity: 0.8;
+    top: 0;
+    left: 0;
+    z-index: 10;
+  }
+  .restrict-layer-text{
+    background-color: white;
+    width: 100%;
+    height: 398px;
+    opacity: 1;
+    z-index: 11;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .wrapper{
+      text-align: center;
+      .text1{
+        margin-bottom: 22px;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 140%;
+        /* identical to box height, or 34px */
+
+
+        /* Neutral/200 */
+
+        color: #333333;
+      }
+      .text2{
+        margin-bottom: 40px;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 18px;
+        line-height: 140%;
+        /* or 25px */
+
+
+        /* Neutral/200 */
+
+        color: #333333;
+      }
+      .button-holder{
+        .button-reg{
+          background-color: #2270E8;
+          border-radius: 32px;
+          padding: 16px 24px;
+          font-weight: bold;
+          font-size: 18px;
+          line-height: 21px;
+          color: #FFFFFF;
+        }
+        span{
+          font-style: normal;
+          font-weight: normal;
+          font-size: 16px;
+          line-height: 19px;
+          color: #B3B3B3;
+          margin: 0px 8px;
+        }
+        .button-log{
+          background-color: transparent;
+          font-weight: bold;
+          border-radius: 32px;
+          font-size: 18px;
+          line-height: 21px;
+          color: #2270E8;
+          padding: 16px 24px;
+        }
       }
     }
   }
