--- a/template/my_account.html
+++ b/template/my_account.html
@@ -172,11 +172,21 @@
         <div class="trial-card">
 
         </div>
-        <button class="btn btn-primary">Nâng cấp gói</button>
+        <button class="btn btn-primary">
+          <a href="/thecup/template/purchase.html">
+            Nâng cấp gói
+          </a>
+        </button>
         <div class="sixmonth-card">
 
         </div>
-        <button class="btn btn-primary">Nâng cấp gói</button>
+
+        <button class="btn btn-primary">
+          <a href="/thecup/template/purchase.html">
+            Nâng cấp gói
+          </a>
+
+        </button>
 
       </div>
     </div>
