--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,6 +24,60 @@ p{
   padding-right: 0!important;
   padding-left: 0!important;
 }
+.homepage-body{
+  position: relative;
+}
+.register-body,.login-body{
+  transition: 0.2s ease;
+  position: absolute;
+  width: 100%;
+  height: 1080px;
+  opacity: 0;
+  visibility: hidden;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+.search-popup-body{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 960px;
+  background-color: rgba(0, 0, 0, 0.85);
+  z-index: 12;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.2s ease;
+  .search-popup-holder{
+    width: 50%;
+    height: 200px;
+    .input-group{
+      display: inline-flex;
+      width: 85%;
+      height: 70px;
+      input{
+        border-radius: 40px;
+        font-size: 22px;
+        padding-left: 40px;
+      }
+    }
+    button{
+      display: inline-flex;
+
+      font-size: 39px;
+      margin-left: 24px;
+      color: #767676;
+      letter-spacing: 1px;
+      i{
+        color: white;
+      }
+    }
+  }
+}
 .navbar{
   background-color: $navbar-color;
   height: 62px;
@@ -41,6 +95,8 @@ p{
     }
   }
   .navbar-nav{
+    display: flex;
+    align-items: center;
     .dropdown-menu{
       transition: all 0.3s ease;
       opacity: 0;
@@ -268,7 +324,7 @@ p{
     }
   }
   .btn-radio-next{
-    isplay: flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     position: absolute;
@@ -578,12 +634,17 @@ p{
         line-height: 19.6px;
         font-weight: 500;
         color: #767676;
-        margin-right: 30px;
+        margin-right: 20px;
       }
       .social-connect-icon{
-        display: inline-block;
-        margin-left: 11px;
-        color: #22539D;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 10px;
+        background-color: #E8EFFA;
+        width: 32px;
+        height: 32px;
+        border-radius: 17px;
         font-size: 14px;
       }
     }
@@ -2825,8 +2886,7 @@ p{
 }
 .register-body,.login-body{
   background-color: #E8EFFA;
-  position: relative;
-  padding-top: 144px;
+  padding-top: 134px;
   .logo-thecup{
     display: block;
     width: 198px;
