--- a/template/my_account.html
+++ b/template/my_account.html
@@ -213,9 +213,7 @@
               <a href="/thecup/template/economy.html">
                 <div class="footer-content-box">
                   <div class="footer-content-box-inner">
-                    <p class="content-box-icon material-icons">
-                      track_changes
-                    </p>
+                    <img class="content-box-icon material-icons" src="/thecup/resources/img/icon/ic_economy.svg">
                     <div class="content-box-divider1"></div>
                     <div class="content-box-divider2"></div>
                     <p class="content-box-cat-name">Kinh tế</p>
@@ -227,9 +225,7 @@
               <a href="/thecup/template/life.html">
                 <div class="footer-content-box">
                   <div class="footer-content-box-inner">
-                    <p class="content-box-icon material-icons">
-                      track_changes
-                    </p>
+                    <img class="content-box-icon material-icons" src="/thecup/resources/img/icon/ic_life.svg">
                     <div class="content-box-divider1"></div>
                     <div class="content-box-divider2"></div>
                     <p class="content-box-cat-name">Sống</p>
@@ -241,9 +237,7 @@
               <a href="/thecup/template/economy.html">
                 <div class="footer-content-box">
                   <div class="footer-content-box-inner">
-                    <p class="content-box-icon material-icons">
-                      track_changes
-                    </p>
+                    <img class="content-box-icon material-icons" src="/thecup/resources/img/icon/ic_tech.svg">
                     <div class="content-box-divider1"></div>
                     <div class="content-box-divider2"></div>
                     <p class="content-box-cat-name">Công nghệ</p>
@@ -255,9 +249,7 @@
               <a href="/thecup/template/economy.html">
                 <div class="footer-content-box">
                   <div class="footer-content-box-inner">
-                    <p class="content-box-icon material-icons">
-                      track_changes
-                    </p>
+                    <img class="content-box-icon material-icons" src="/thecup/resources/img/icon/ic_art.svg">
                     <div class="content-box-divider1"></div>
                     <div class="content-box-divider2"></div>
                     <p class="content-box-cat-name">Nghệ thuật</p>
@@ -269,9 +261,7 @@
               <a href="/thecup/template/economy.html">
                 <div class="footer-content-box">
                   <div class="footer-content-box-inner">
-                    <p class="content-box-icon material-icons">
-                      track_changes
-                    </p>
+                    <img class="content-box-icon material-icons" src="/thecup/resources/img/icon/ic_sport.svg">
                     <div class="content-box-divider1"></div>
                     <div class="content-box-divider2"></div>
                     <p class="content-box-cat-name">Thể thao</p>
@@ -288,16 +278,24 @@
     <div class="container">
       <div class="social-connect">
         <span class="social-connect-text">Kết nối với chúng tôi</span>
-        <span class="social-connect-icon material-icons">facebook</span>
-        <span class="social-connect-icon material-icons">play_arrow</span>
-        <span class="social-connect-icon material-icons">camera_alt</span>
-        <span class="social-connect-icon material-icons">sick</span>
+        <div class="social-connect-icon">
+          <img src="/thecup/resources/img/icon/ic_facebook.svg" alt="">
+        </div>
+        <div class="social-connect-icon">
+          <img src="/thecup/resources/img/icon/ic_youtube.svg" alt="">
+        </div>
+        <div class="social-connect-icon">
+          <img src="/thecup/resources/img/icon/ic_instagram.svg" alt="">
+        </div>
+        <div class="social-connect-icon">
+          <img src="/thecup/resources/img/icon/ic_twitter.svg" alt="">
+        </div>
       </div>
       <div class="divider"></div>
       <div class="the-cup-signature-holder d-flex">
         <div class="the-cup-signature-left me-auto">
           <a href="#" class="the-cup-logo">
-            <img src="../resources/img/logo-footer.svg" alt="">
+            <img src="/thecup/resources/img/logo-footer.svg" alt="">
           </a>
           <a href="/thecup/template/contact.html" class="the-cup-footer-link">
             <div class="text">Liên hệ</div>
