fix css search, trigger rebuild

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -309,7 +309,7 @@ p{
     align-items: center;
     justify-content: center;
     position: absolute;
-    left: -5%;
+    left: -60px;
     top: 40%;
     z-index: 4;
     width: 54px;
@@ -328,7 +328,7 @@ p{
     align-items: center;
     justify-content: center;
     position: absolute;
-    right: -5%;
+    right: -60px;
     top: 40%;
     z-index: 4;
     border-color: #E8EFFA;
