--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,7 +268,7 @@ p {
     align-items: center;
     justify-content: center;
     position: absolute;
-    left: -5%;
+    left: -60px;
     top: 40%;
     z-index: 4;
     width: 54px;
@@ -285,7 +285,7 @@ p {
     align-items: center;
     justify-content: center;
     position: absolute;
-    right: -5%;
+    right: -60px;
     top: 40%;
     z-index: 4;
     border-color: #E8EFFA;
